--- a/foundry.toml
+++ b/foundry.toml
@@ -3,5 +3,5 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 ffi = true
-remappings = ['ds-test/=lib/ds-test/']
+remappings = ['ds-test/=lib/ds-test/src/']
 
